[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/tiled_map_loader/OpenTilemapDlg.gd" type="Script" id=1]
[ext_resource path="res://addons/tiled_map_loader/ConditionalIntOption.tscn" type="PackedScene" id=2]

[node name="OpenTilemapDlg" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
window_title = "Open Tilemap"
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
popup_size = Vector2( 475, 400 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0
__meta__ = {
"_edit_lock_": true
}

[node name="FileLine" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FileLine"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Tilemap File"

[node name="InputFile" type="LineEdit" parent="MarginContainer/VBoxContainer/FileLine"]
margin_left = 82.0
margin_right = 909.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Browse" type="Button" parent="MarginContainer/VBoxContainer/FileLine"]
margin_left = 913.0
margin_right = 984.0
margin_bottom = 24.0
text = "Browse..."

[node name="LogLine" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 984.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LogLine"]
margin_top = 5.0
margin_right = 49.0
margin_bottom = 19.0
text = "Log File"

[node name="LogFile" type="LineEdit" parent="MarginContainer/VBoxContainer/LogLine"]
margin_left = 53.0
margin_right = 909.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://temp/output.log"

[node name="Browse" type="Button" parent="MarginContainer/VBoxContainer/LogLine"]
margin_left = 913.0
margin_right = 984.0
margin_bottom = 24.0
text = "Browse..."

[node name="Options" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 984.0
margin_bottom = 96.0
columns = 3

[node name="EmbedIntImg" type="CheckBox" parent="MarginContainer/VBoxContainer/Options"]
margin_right = 177.0
margin_bottom = 40.0
text = "Embed Internal Images"

[node name="Margin" parent="MarginContainer/VBoxContainer/Options" instance=ExtResource( 2 )]
margin_left = 181.0
margin_right = 304.0
option_name = "Margin"
enabled = false

[node name="Spacing" parent="MarginContainer/VBoxContainer/Options" instance=ExtResource( 2 )]
margin_left = 308.0
margin_right = 436.0
option_name = "Spacing"
enabled = false

[node name="LoadTilemap" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 10
text = "Load Tilemap"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 652.0
margin_bottom = 392.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.tmx ; Tiled XML Files", "*.json ; Tiled JSON Files" )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="popup_hide" from="." to="." method="_close_dialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FileLine/Browse" to="." method="_browse_open_file"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LogLine/Browse" to="." method="_browse_log_file"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadTilemap" to="." method="_load_tilemap"]
[connection signal="about_to_show" from="FileDialog" to="." method="_on_FileDialog_about_to_show"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
